# shikicrate

./: .cursorrules  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: ci.yml
examples/: debug_api.rs  test_client.rs
src/: client.rs  error.rs  lib.rs  pagination.rs  queries.rs  types.rs
tests/: integration_test.rs
