[package]
name = "shikicrate"
version = "0.1.0"
edition = "2024"
authors = ["KidTheFelon <kidneyfelon@gmail.com>"]
description = "Rust client for Shikimori GraphQL API"
license = "MIT OR Apache-2.0"
repository = "https://github.com/KidTheFelon/shikicrate"
readme = "README.md"
keywords = ["shikimori", "anime", "manga", "graphql", "api"]
categories = ["api-bindings", "web-programming"]

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
reqwest = { version = "0.13.1", features = ["json", "rustls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
tokio = { version = "1.49.0", features = ["rt", "rt-multi-thread", "macros"] }
thiserror = "2.0.17"
url = "2.5.7"

[dev-dependencies]
tokio-test = "0.4.4"
