[package]
name = "shikicrate"
version = "0.2.0"
edition = "2024"
authors = ["KidTheFelon <kidneyfelon@gmail.com>"]
description = "Rust client for Shikimori GraphQL API"
license = "MIT OR Apache-2.0"
repository = "https://github.com/KidTheFelon/shikicrate"
readme = "README.md"
keywords = ["shikimori", "anime", "manga", "graphql", "api"]
categories = ["api-bindings", "web-programming"]

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
futures = "0.3"
reqwest = { version = "0.13", features = ["json", "rustls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.49", features = ["rt", "rt-multi-thread", "macros"] }
thiserror = "2.0"
url = "2.5"

[dev-dependencies]
tokio-test = "0.4"
